fixed table on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -539,11 +539,15 @@ div.info {
     width: 70vw;
 }
 
-table {
+.table {
     display: flex;
     justify-content: center;
     border-collapse: collapse;
     padding-bottom: 2vh;
+}
+
+ .table-mb {
+    display: none;
 }
 
 tr {
@@ -576,6 +580,19 @@ td {
     padding-right: 0;
 }
 
+b{
+ font-family: 'Daydream';
+ font-size: 0.8rem;
+ vertical-align:bottom;
+}
+
+i {
+    font-family: 'Ring Matrix';
+    font-size: 1.2rem ;
+    font-weight: bold;
+    vertical-align:bottom;
+}
+
 .lcd-scroll {
     overflow-y: scroll;
 }
@@ -585,10 +602,12 @@ td {
     top: 0;
     left: 0;
     padding: 5px 10px 5px 10px;
-    margin: 15px;
+    margin: 10px 15px 10px 15px;;
 
-    font-family: 'Rocko';
-    border: 5px outset;
+    font-family: 'Neue Haas Display Roman';
+    color:#27282D;
+    font-size: 1rem;
+    border: 10px outset;
     border-radius: 50%;
 
     text-decoration: none;
@@ -602,7 +621,7 @@ td {
 
 .return:active {
     color: #27282D;
-    border: 5px inset;
+    border: 10px inset;
     border-radius: 50%;
 }
 
@@ -652,7 +671,7 @@ td {
     height: 50vh;
     width: 80vw;
     background: #8A9B8C;
-    border: 40px outset #48B800;
+    border: 40px groove #48B800;
     border-radius: 50px;
     overflow-y: scroll;
 }
@@ -883,6 +902,12 @@ screen and (max-width: 1100px) and (max-height: 700px) {
         justify-content: right;
         text-align: right;
     }  
+
+    i {
+    font-size: 1rem;
+    vertical-align: top;
+    letter-spacing: -0.1rem;
+    }
     
 }
 
@@ -918,25 +943,36 @@ screen and (max-width: 1100px) and (max-height: 700px) {
     }
 
     #bear-info {
-        margin: 10px;
-        height: 70vh;
+        margin: 5%;
+        height: 60vh;
         width: 80vw;
-        border: 20px outset #48B800;
+        border: 20px groove #48B800;
     }
     
     #castle-info {
-        margin: 10px;
-        height: 70vh;
+        margin: 5%;
+        height: 60vh;
         width: 80vw;
         border: 10px inset #3E7BD7;
     }
     
     #bonsai-info {
         max-width: unset;
-        margin: 10px;
-        height: 70vh;
+        margin: 5%;
+        height: 60vh;
         width: 80vw;
         border: 10px inset #E9F0F2;
+    }
+
+    .table-mb {
+        display: flex;
+        justify-content: center;
+        border-collapse: collapse;
+        padding-bottom: 2vh;
+    }
+    
+     .table {
+        display: none;
     }
 
     .tb-left {
@@ -948,9 +984,8 @@ screen and (max-width: 1100px) and (max-height: 700px) {
 
     .tb-right{
         text-align: right;
-        width: 40vw;
-/*     
-        display: flex; */
+        width: 50vw;
+/*     display: flex; */
         justify-content: right;
         text-align: right;
     }  
